# f3d

./: .clang-format  .clang-format-ignore  .clang-tidy  .codespellrc  .cppcheck.supp  .gitattributes  .gitignore  .gitlab-ci.yml  .lfsconfig  .lsan.supp  .prettierignore  .tsan.supp  AI_POLICY.md  A_README.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  CRITICAL_REVIEW_Open3SDCM.md  Config.h  Config.h.in  Dockerfile.linux  F3DLoader.cxx  F3DLoader.h  F3DLog.h  F3DOptions.cxx  F3DOptions.h  F3DViewer.cxx  F3DViewer.h  GENERATE.md  IMPLEMENTATION_SUMMARY_Open3SDCM.md  LICENSE  LICENSE.html  LICENSE.md  PLAN_Open3SDCM_Integration.md  README.md  README_F3D.md  README_libf3d.md  (+31 more)
.github/test_sdk/: CMakeLists.txt  main.cxx
application/: CMakeLists.txt  F3DCLIOptions.h.in  F3DColorMapTools.cxx  F3DColorMapTools.h  F3DConfig.h.in  F3DConfigFileTools.cxx  F3DConfigFileTools.h  F3DException.h  F3DNSDelegate.h  F3DNSDelegate.mm  F3DOptionsParser.cxx  F3DOptionsParser.h  F3DOptionsTools.cxx  F3DOptionsTools.h  F3DPluginsTools.cxx  F3DPluginsTools.h  F3DStarter.cxx  F3DStarter.h  F3DSystemTools.cxx  F3DSystemTools.h  main.cxx
application/testing/: CMakeLists.txt  auto_reload.sh  f3d_piped.cmake  test_watch.ps1  test_watch.sh  tests.alembic.cmake  tests.assimp.cmake  tests.backends.cmake  tests.common.cmake  tests.custom.cmake  tests.documentation.cmake  tests.draco.cmake  tests.features.cmake  tests.gaussian.cmake  tests.hdf.cmake  tests.home.cmake  tests.ifc.cmake  tests.interaction.cmake  tests.native.cmake  tests.occt.cmake  tests.pdal.cmake  tests.plugins.cmake  tests.screenshot.cmake  tests.usd.cmake  tests.vdb.cmake  tests.watch.cmake  tests.webifc.cmake
c/: CMakeLists.txt  camera_c_api.cxx  camera_c_api.h  context_c_api.cxx  context_c_api.h  engine_c_api.cxx  engine_c_api.h  f3d_c_api.c  f3d_c_api.h  image_c_api.cxx  image_c_api.h  interactor_c_api.cxx  interactor_c_api.h  log_c_api.cxx  log_c_api.h  options_c_api.cxx  options_c_api.h  scene_c_api.cxx  scene_c_api.h  types_c_api.cxx  types_c_api.h  utils_c_api.cxx  utils_c_api.h  window_c_api.cxx  window_c_api.h
c/testing/: CMakeLists.txt  pseudo_unit_test.h  test_camera.c  test_camera_c_api.c  test_context.c  test_context_c_api.c  test_engine.c  test_engine_c_api.c  test_image.c  test_image_c_api.c  test_image_stream.c  test_interactor.c  test_interactor_c_api.c  test_log.c  test_log_c_api.c  test_options.c  test_options_c_api.c  test_pseudo_unit_test.c  test_scene.c  test_scene_buffer.c  test_scene_buffer_c_api.c  test_scene_c_api.c  test_scene_mesh_view.c  test_types.c  test_types_c_api.c  test_utils.c  test_utils_c_api.c  test_window.c  test_window_c_api.c
examples/libf3d/: CMakeLists.txt
examples/plugins/: CMakeLists.txt
java/: CMakeLists.txt  Camera.java  Context.java  Engine.java  F3DCameraBindings.cxx  F3DContextBindings.cxx  F3DEngineBindings.cxx  F3DException.java  F3DImageBindings.cxx  F3DInteractorBindings.cxx  F3DJavaBindings.cxx  F3DJavaBindings.h  F3DLogBindings.cxx  F3DOptionsBindings.cxx  F3DSceneBindings.cxx  F3DTypesBindings.cxx  F3DUtilsBindings.cxx  F3DWindowBindings.cxx  Image.java  Interactor.java  Loader.java  Log.java  Options.java  Scene.java  Transform2D.java  Types.java  Utils.java  Window.java
java/testing/: CMakeLists.txt  TestCamera.java  TestEngine.java  TestImage.java  TestImageStream.java  TestInteractor.java  TestJavaBindings.java  TestLog.java  TestOptions.java  TestScene.java  TestSceneBuffer.java  TestTypes.java  TestUtils.java  TestWindow.java
plugins/: CMakeLists.txt
plugins/alembic/: CMakeLists.txt  f3d-alembic-formats.xml
plugins/assimp/: 3mf.inl  CMakeLists.txt  assimp.inl  assimp.inl.in  collada.inl  dae.inl  directx.inl  dxf.inl  f3d-assimp-formats.xml  fbx.inl  off.inl  x.inl  xbf.inl
plugins/core/: CMakeLists.txt
plugins/draco/: CMakeLists.txt  glb.inl
plugins/exodus/: CMakeLists.txt  exodus.inl
plugins/hdf/: CMakeLists.txt  exodus.inl  f3d-hdf-formats.xml  netcdf.inl
plugins/ifc/: CMakeLists.txt  IFC.inl  f3d-ifc-formats.xml
plugins/native/: 3ds.inl  dicom.inl  (+15 more)
python/: CMakeLists.txt  F3DPythonBindings.cxx  __init__.py.in  generate_stubs.py  test_generate_stubs.py
resources/: BundleInfo.plist.in  CMakeLists.txt  app.f3d.F3D.metainfo.xml  cli-options.json  cli-options.schema.json  com.f3d-app.F3D.metainfo.xml  com.kitware.F3D.metainfo.xml  completion.bash  completion.bash.in  completion.fish  completion.fish.in  completion.zsh  completion.zsh.in  config.json  defaultHDRI.hdr  f3d.desktop  f3d.desktop.in  f3d.rc  f3d.thumbnailer  f3d.thumbnailer.in  f3d_z.thumbnailer  io.github.f3d_app.f3d.metainfo.xml  logo.icns  mime-types-3d-formats.xml  mime-types-3d-misc-formats.xml  mime-types-assimp-formats.xml  mime-types-cad-formats.xml  mime-types-draco-formats.xml  mime-types-exodus-formats.xml  thumbnail.json
src/: CMakeLists.txt  Config.cxx.in  Config.h.in  F3DAnimationManager.cxx  F3DAnimationManager.h  F3DLoader.cxx  F3DLoader.h  F3DLog.cxx  F3DLog.h  F3DNSDelegate.h  F3DNSDelegate.mm  F3DOffscreenRender.cxx  F3DOffscreenRender.h  F3DOptions.cxx  F3DOptions.h  F3DReaderInstantiator.h.in  F3DViewer.cxx  F3DViewer.h  configure_linux_mime_types.cxx  configure_win32_exts.cxx  cxxopts.hpp  main.cxx  vtkF3DAlembicImporter.cxx  vtkF3DAlembicImporter.h  vtkF3DAssimpImporter.h  vtkF3DConsoleOutputWindow.cxx  vtkF3DConsoleOutputWindow.h  vtkF3DGenericImporter.cxx  vtkF3DGenericImporter.h  vtkF3DInteractionHandler.cxx  vtkF3DInteractionHandler.h  vtkF3DInteractor.cxx  vtkF3DInteractor.h  vtkF3DInteractorEventRecorder.cxx  vtkF3DInteractorEventRecorder.h  vtkF3DInteractorStyle.cxx  vtkF3DInteractorStyle.h  vtkF3DInteractorStyle2D.cxx  vtkF3DInteractorStyle2D.h  vtkF3DInteractorStyle3D.cxx  (+19 more)
webassembly/: CMakeLists.txt  F3DEmscriptenBindings.cxx  README.md  app.html  build.sh  example.html  manifest.json  package.json
winshellext/: CMakeLists.txt  F3DShellExtension.cxx  F3DShellExtension.cxx.in  F3DShellExtensionClassFactory.h  F3DThumbnailConfig.h.in  F3DThumbnailProvider.cxx  F3DThumbnailProvider.h
(+1651 files in other folders)
