[build-system]
requires = ["scikit-build-core", "setuptools-scm>=8.0", "pybind11_stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "f3d"
requires-python = ">=3.9"
dynamic = ["version"]
description = "F3D, a fast and minimalist 3D viewer"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
authors = [
  {name = "Michael Migliore"},
  {name = "Mathieu Westphal"},
]
maintainers = [
  {name = "Michael Migliore", email = "mcmigliore+pip@gmail.com"}
]
keywords = ["vtk", "animations", "fbx", "step", "stl", "gltf", "pbr", "raytracing", "rendering"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
  "Topic :: Multimedia :: Graphics :: Viewers",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://f3d.app"
Repository = "https://github.com/f3d-app/f3d.git"
Changelog = "https://github.com/f3d-app/f3d/blob/master/doc/CHANGELOG.md"

[tool.scikit-build]
minimum-version = "0.4"
install.components = ["library", "plugin", "python", "dependencies"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["_version.py"]
cmake.build-type = "Release"
cmake.minimum-version = "3.21"
ninja.make-fallback = false
ninja.minimum-version = "1.10"
wheel.install-dir = "f3d"
wheel.license-files = ["LICENSE.md", "doc/THIRD_PARTY_LICENSES.md"]
wheel.packages = []

[tool.setuptools_scm]
version_file = "_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "3.2.0"

[tool.scikit-build.cmake.define]
CMAKE_OSX_DEPLOYMENT_TARGET = "10.15"
BUILD_SHARED_LIBS = "ON"
F3D_BINDINGS_PYTHON = "ON"
F3D_BINDINGS_PYTHON_GENERATE_STUBS = "ON"
F3D_PLUGINS_STATIC_BUILD = "ON"
F3D_BUILD_APPLICATION = "OFF"
F3D_WINDOWS_BUILD_SHELL_THUMBNAILS_EXTENSION = "OFF"
F3D_ENABLE_SOVERSION = "OFF"

[tool.pytest.ini_options]
addopts = "-rA"
filterwarnings = "ignore::DeprecationWarning"
